--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
-.sidebar-container {
-  min-height: "100vh";
+.table {
+  border-radius: 0 !important;
+}
+
+.card {
+  border-radius: 0 !important;
 }
